Changed header for gh-pages

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
 <main> 
-  <h1>THIS IS ORIGINAL VERSION</h1>
+  <h1>THIS CHANGE WAS MADE ON GH-PAGES BRANCH</h1>
 <div class="wrapper">
 <div class="one">
   <h2>ONE. 111111</h2>
